JSON macro package was developed